--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,6 +66,12 @@ body {
   width: 30px;
   height: 30px;
   cursor: pointer;
+  margin-right: 40px;
+}
+#newText {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
 .modal-restart {
   position: absolute;
