--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,11 +28,11 @@ body {
 .wrapper {
   position: relative;
   margin: 0 auto;
-  margin-top: 20vh;
+  margin-top: 8vh;
   width: 85%;
   height: 50vh;
   border-radius: 30px;
-  background-color: #2d2e32;
+  background-color: rgb(45, 46, 50, 0.8);
   /* opacity: 60%; */
   box-shadow: 0rem 0rem 5rem rgb(0, 0, 0, 0.3);
   display: flex;
@@ -67,11 +67,7 @@ body {
   height: 30px;
   cursor: pointer;
   margin-right: 40px;
-}
-#newText {
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
+  filter: invert(100%);
 }
 .modal-restart {
   position: absolute;
@@ -116,6 +112,9 @@ body {
   width: 60vw;
   height: 67vh;
   background-color: #202021;
+  background-blend-mode: soft-light;
+  background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 20px;
   padding: 50px;
   font-family: 'Chivo Mono';
@@ -205,14 +204,48 @@ body {
   text-align: center;
 }
 .header {
-  width: 100vw;
-  height: 10vh;
-  background-color: #1f1e1e;
+  width: 350px;
+  height: 60px;
+  /* background-color: #1f1e1e; */
+  background-image: url('HeadingLogo3.png');
+  background-repeat: no-repeat;
+  background-size: contain;
   position: absolute;
-  top: 0px;
-  display: flex;
+  top: 10px;
+  left: 10px;
 }
 .header img {
   margin-top: 10px;
   margin-left: 20px;
+}
+.nav {
+  width: 20vw;
+  height: 70px;
+  margin: 0 auto;
+  font-size: 2.3rem;
+  border-radius: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin-top: 15vh;
+  background: rgba(166, 163, 163, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+.nav-links {
+  background-color: rgb(123, 119, 119);
+  border-radius: 100px;
+  cursor: pointer;
+}
+.nav-links:hover {
+  transform: scale(115%);
+  transition: 0.3s;
+}
+.scorebg {
+  background-color: #333438;
+  border-radius: 100px;
+  padding: 5px;
 }
