--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@font-face {
+  font-family: 'type';
+  src: url('Compagnon.otf');
+}
 * {
   margin: 0;
   padding: 0;
@@ -8,22 +12,53 @@
 }
 body {
   background-color: #333438;
+  background-image: url('Classic-Background.jpg');
   background-size: cover;
 }
-@font-face {
-  font-family: 'type';
-  src: url('Compagnon.otf');
+.header {
+  width: 21rem;
+  min-height: 4rem;
+  background-image: url('Classic-Heading.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
 }
-#headingmain {
-  font-family: 'type';
-  font-weight: 200;
-  /* letter-spacing: 5px; */
-  /* color: #e5b816e4; */
-  color: rgb(123, 119, 119);
-  font-size: 3vw;
-  text-align: left;
-  margin: 5px 0px 0px 30px;
-  /* text-shadow: 4px 4px rgb(123, 119, 119); */
+#iBtn {
+  width: 35px;
+  height: 35px;
+  filter: invert(100);
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  cursor: pointer;
+}
+.nav {
+  width: 22vw;
+  height: 4.375rem;
+  margin: 0 auto;
+  margin-top: 15vh;
+  padding: 10px;
+  font-size: 2.3rem;
+  border-radius: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: rgba(166, 163, 163, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+.nav-links {
+  background-color: rgb(123, 119, 119);
+  border-radius: 100px;
+  cursor: pointer;
+}
+.nav-links:hover {
+  transform: scale(115%);
+  transition: 0.3s;
 }
 .wrapper {
   position: relative;
@@ -32,54 +67,14 @@ body {
   width: 85%;
   height: 50vh;
   border-radius: 30px;
-  background-color: rgb(45, 46, 50, 0.8);
-  /* opacity: 60%; */
+  background-color: rgba(38, 38, 52, 0.8);
   box-shadow: 0rem 0rem 5rem rgb(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  padding: 30px;
+  padding: 20px;
 }
-.container {
-  width: 95%;
-  margin: 0 auto;
-  max-height: 100%;
-  text-align: justify;
-}
-.letter {
-  color: rgb(123, 119, 119);
-  font-family: 'Roboto', sans-serif;
-  font-family: 'Chivo Mono', monospace;
-  font-weight: 300;
-  font-size: 1.7rem;
-  letter-spacing: 2px;
-  line-height: 60px;
-}
-.counter {
-  color: #dfb414;
-  font-family: 'Open Sans';
-  font-size: 1.4rem;
-  font-weight: 400;
-}
-#redo {
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  margin-right: 40px;
-  filter: invert(100%);
-}
-.modal-restart {
-  position: absolute;
-  bottom: -20px;
-  background-color: black;
-  padding: 8px;
-  color: rgb(123, 119, 119);
-  font-size: 1.2rem;
-  letter-spacing: 2px;
-  font-family: 'Roboto';
-}
-
 .warning {
   background-color: #dfb414;
   color: #2d2e32;
@@ -95,11 +90,52 @@ body {
   top: 15px;
 }
 .warning img {
-  margin-right: 5px;
+  margin-right: 10px;
 }
-
+.container {
+  width: 95%;
+  margin: 0 auto;
+  max-height: 100%;
+  text-align: justify;
+}
+.letter {
+  color: rgb(123, 119, 119);
+  font-family: 'Chivo Mono', monospace;
+  font-weight: 300;
+  font-size: 1.7rem;
+  letter-spacing: 2px;
+  line-height: 60px;
+}
+#redo {
+  margin: 0 auto;
+  width: 30px;
+  height: 30px;
+}
+#redo img {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  margin-right: 40px;
+  filter: invert(100%);
+}
+.modal-restart {
+  position: absolute;
+  bottom: -20px;
+  background-color: black;
+  padding: 8px;
+  color: rgb(123, 121, 119);
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  font-family: 'Roboto';
+}
+.counter {
+  color: #dfb414;
+  font-family: 'Open Sans';
+  font-size: 1.4rem;
+  font-weight: 400;
+}
 .scoreCard {
-  width: 80%;
+  width: 50%;
   margin: 50px auto 0;
   color: rgb(123, 119, 119);
   font-family: 'Chivo Mono', monospace;
@@ -108,13 +144,19 @@ body {
   justify-content: center;
   gap: 50px;
 }
+.scorebg {
+  background-color: rgba(38, 38, 52, 0.8);
+  border-radius: 100px;
+  padding: 5px;
+}
 .Results {
   width: 60vw;
   height: 67vh;
-  background-color: #202021;
+  background-color: #212a4e;
   background-blend-mode: soft-light;
   background-repeat: no-repeat;
   background-size: cover;
+  background-image: url('Classic-Background.jpg');
   border-radius: 20px;
   padding: 50px;
   font-family: 'Chivo Mono';
@@ -125,7 +167,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.cont {
+.content {
   display: flex;
 }
 .Results hr {
@@ -141,7 +183,7 @@ body {
   font-family: 'Chivo Mono';
 }
 .Results h2 {
-  color: rgb(123, 119, 119);
+  color: #fff;
   font-size: 3.5rem;
   font-weight: 300;
   letter-spacing: 3px;
@@ -203,49 +245,30 @@ body {
   letter-spacing: 7px;
   text-align: center;
 }
-.header {
-  width: 350px;
-  height: 60px;
-  /* background-color: #1f1e1e; */
-  background-image: url('HeadingLogo3.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+.info {
+  z-index: 100;
+  width: 80%;
+  height: 80%;
+  background-image: url(info-modal.png);
+  background-size: cover;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50px;
 }
-.header img {
-  margin-top: 10px;
-  margin-left: 20px;
+.infoContent {
+  width: 87%;
+  height: 70%;
+  position: absolute;
+  text-align: justify;
+  bottom: 0px;
+  left: 90px;
 }
-.nav {
-  width: 20vw;
-  height: 70px;
-  margin: 0 auto;
-  font-size: 2.3rem;
-  border-radius: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  margin-top: 15vh;
-  background: rgba(166, 163, 163, 0.2);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-}
-.nav-links {
-  background-color: rgb(123, 119, 119);
-  border-radius: 100px;
-  cursor: pointer;
-}
-.nav-links:hover {
-  transform: scale(115%);
-  transition: 0.3s;
-}
-.scorebg {
-  background-color: #333438;
-  border-radius: 100px;
-  padding: 5px;
+.infoContent li {
+  color: orange;
+  font-size: 1.5rem;
+  font-family: 'type';
+  line-height: 33px;
 }
