--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @font-face {
   font-family: 'type';
-  src: url('Compagnon.otf');
+  src: url('Assets/Compagnon.otf');
 }
 * {
   margin: 0;
@@ -12,15 +12,11 @@
 }
 body {
   background-color: #333438;
-  background-image: url('Classic-Background.jpg');
+  background-image: url('Assets/Background-0.jpg');
   background-size: cover;
 }
-.header {
-  width: 21rem;
-  min-height: 4rem;
-  background-image: url('Classic-Heading.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+#Heading {
+  width: 20rem;
   position: absolute;
   top: 1rem;
   left: 1rem;
@@ -52,13 +48,22 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 .nav-links {
-  background-color: rgb(123, 119, 119);
+  background-color: rgb(38, 38, 52, 0.8);
   border-radius: 100px;
   cursor: pointer;
 }
 .nav-links:hover {
   transform: scale(115%);
-  transition: 0.3s;
+  transition: 0.5s;
+}
+#nav-text {
+  color: white;
+  text-align: center;
+  position: relative;
+  top: 110px;
+  font-size: 1rem;
+  font-family: 'type';
+  margin: 0 auto;
 }
 .wrapper {
   position: relative;
@@ -106,17 +111,19 @@ body {
   letter-spacing: 2px;
   line-height: 60px;
 }
-#redo {
-  margin: 0 auto;
-  width: 30px;
-  height: 30px;
+.icon-container {
+  display: flex;
 }
-#redo img {
+#icon {
+  margin: 0 auto;
+}
+#icon img {
   width: 30px;
   height: 30px;
   cursor: pointer;
   margin-right: 40px;
   filter: invert(100%);
+  display: inline-block;
 }
 .modal-restart {
   position: absolute;
@@ -156,7 +163,7 @@ body {
   background-blend-mode: soft-light;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('Classic-Background.jpg');
+  background-image: url('Assets/Background-0.jpg');
   border-radius: 20px;
   padding: 50px;
   font-family: 'Chivo Mono';
@@ -222,7 +229,7 @@ body {
   opacity: 80%;
 }
 .close {
-  color: #dfb414;
+  color: #fff;
   font-family: 'Open Sans';
   font-weight: 900;
   font-size: 2rem;
@@ -249,7 +256,7 @@ body {
   z-index: 100;
   width: 80%;
   height: 80%;
-  background-image: url(info-modal.png);
+  background-image: url('Assets/info-modal.png');
   background-size: cover;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   position: absolute;
@@ -266,9 +273,15 @@ body {
   bottom: 0px;
   left: 90px;
 }
+.iBtn {
+  cursor: pointer;
+}
 .infoContent li {
   color: orange;
   font-size: 1.5rem;
   font-family: 'type';
   line-height: 33px;
+}
+#head {
+  color: whitesmoke;
 }
