--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,8 +43,8 @@ body {
   align-items: center;
   background: rgba(166, 163, 163, 0.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 .nav-links {
@@ -54,7 +54,7 @@ body {
 }
 .nav-links:hover {
   transform: scale(115%);
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
 }
 #nav-text {
   color: white;
